--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,9 @@
 				<input type="password" name="password" placeholder="Password" id="password" required>
 				<div class="msg">{{ msg }}</div>
 				<input type="submit" value="Login">
+
+				<input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+				
 			</form>
 		</div>
 	</body>
