--- a/templates/register.html
+++ b/templates/register.html
@@ -28,6 +28,9 @@
 				<input type="email" name="email" placeholder="Email" id="email" required>
 				<div class="msg">{{ msg }}</div>
 				<input type="submit" value="Register">
+
+				<input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+				
 			</form>
 		</div>
 	</body>
